--- a/index.html
+++ b/index.html
@@ -1,13 +1,66 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- BASIC -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+
+    <!-- FAVICON -->
+    <link rel="icon" type="image/png" href="/Logo-img2.png" />
+
+    <!-- SEO TITLE -->
+    <title>
+      Now & Fast Transportation | Packers and Movers in Bhopal | All India Services
+    </title>
+
+    <!-- META DESCRIPTION -->
+    <meta
+      name="description"
+      content="Now & Fast Transportation is a trusted Packers and Movers company in Bhopal providing safe, reliable, and affordable home shifting, office relocation, vehicle transport, and packing services across India."
+    />
+
+    <!-- KEYWORDS -->
+    <meta
+      name="keywords"
+      content="packers and movers in bhopal, packers movers bhopal, house shifting bhopal, office relocation bhopal, transport services india, now and fast transportation"
+    />
+
+    <!-- AUTHOR -->
+    <meta name="author" content="Now & Fast Transportation" />
+
+    <!-- ROBOTS -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- OPEN GRAPH (FACEBOOK / WHATSAPP) -->
+    <meta property="og:title" content="Now & Fast Transportation | Packers & Movers in Bhopal" />
+    <meta
+      property="og:description"
+      content="Professional Packers & Movers in Bhopal offering safe packing, fast transportation, and affordable relocation services across India."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.nowandfasttransportation.com/" />
+    <meta property="og:image" content="https://www.nowandfasttransportation.com/Logo-img2.png" />
+
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Now & Fast Transportation | Packers & Movers" />
+    <meta
+      name="twitter:description"
+      content="Reliable Packers & Movers in Bhopal for home shifting, office relocation & transport services across India."
+    />
+    <meta name="twitter:image" content="https://www.nowandfasttransportation.com/Logo-img2.png" />
+
+    <!-- LOCAL SEO (BUSINESS INFO) -->
+    <meta name="geo.region" content="IN-MP" />
+    <meta name="geo.placename" content="Bhopal" />
+    <meta name="geo.position" content="23.2599;77.4126" />
+    <meta name="ICBM" content="23.2599, 77.4126" />
+
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- MAIN SCRIPT -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
